[fix] set display for project's links to remove gap, and add color to header of project

--- a/src/styles/scss/components/_projects-carousel.scss
+++ b/src/styles/scss/components/_projects-carousel.scss
@@ -58,6 +58,7 @@
 
 .carousel__slide--thumbnail-link {
   height: 500px;
+  display: block;
 }
 
 .carousel__slide-image {
@@ -89,6 +90,7 @@
 
 .carousel__slide--header-link {
   text-decoration: none;
+  display: block;
 }
 
 
